# ri-mml

./: .gitignore  README.md  article.tex  benchmarks_gomez.txt  benchmarks_lopez.txt  pyproject.toml  references.bib
benchmarks/: __init__.py  __main__.py  api.py  caputo_mainardi_silver.py  exact.py  gomez.py  kothari.py  lopez.py  make_report.py  metrics.py  reporting.py  run_all.py  utils.py  verification.py  wang.py
benchmarks/configs/: verification_suite.json
benchmarks/data/: kothari_table3_nonzero_charge.json  kothari_table4_nonzero_discharge.json  kothari_table5_timeframe_transfer.json
benchmarks/digitized/: kothari_fig3a.csv  kothari_fig3b.csv  kothari_fig4.csv  kothari_fig5a.csv  kothari_fig5b.csv  kothari_fig6.csv  kothari_fig7a.csv  kothari_fig7b.csv
benchmarks/report/: benchmark_report.html  benchmark_report.md  caputo_mainardi_T10_report.md  caputo_mainardi_T1_report.md  paper_validation_summary.md  validation_report.html  validation_report.md
benchmarks/results/: caputo_mainardi_T10_results.csv  caputo_mainardi_T1_results.csv  caputo_mainardi_silver_summary.json  gomez_qualitative_reference.json  kothari_mapping_note.json  kothari_summary.json  limitations_lopez_initialization.csv  lopez_initialization_limit.json  lopez_note.json  metrics_gomez.csv  metrics_kothari.csv  metrics_lopez.csv  summary.json  validation_gomez_qualitative.csv  validation_kothari_replay.csv  validation_kothari_strict.csv  validation_wang_external_reference.csv  verification_exact.csv  (+2 more)
rimml/: __init__.py  basis.py  mittag_leffler.py  problem.py  quadrature.py  solver.py
(+7 files in other folders)
