[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ri-mml"
version = "0.1.0"
description = "Resolvent-induced Muntz-Mittag-Leffler Petrov-Galerkin solver"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "scipy>=1.11",
  "mpmath>=1.3",
  "pymittagleffler>=0.1.9",
]

[tool.setuptools.packages.find]
include = ["rimml*"]
