[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ri-mml"
version = "0.1.0"
description = "Resolvent-induced Muntz-Mittag-Leffler Petrov-Galerkin solver"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "scipy>=1.11",
  "mpmath>=1.3",
  "pymittagleffler>=0.1.9",
]

[project.optional-dependencies]
benchmarks = [
  "pandas>=2.2",
  "matplotlib>=3.8",
  "opencv-python-headless>=4.10",
  "PyMuPDF>=1.24",
  "Markdown>=3.6",
]

[project.scripts]
rimml-benchmarks = "benchmarks.run_all:main"

[tool.setuptools.packages.find]
include = ["rimml*", "benchmarks*"]
